# dictrus

./: Cargo.toml  README
doc/: architecture  examples  examples~
docs/: examples
src/: display.rs  lib.rs  lib2.rs  lib2.rs~  main.rs
